--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>no</title>
-
-  <!-- Meta for link preview -->
-  <meta property="og:title" content="no">
-  <meta property="og:description" content="لتطوير موقع مجانا تواصل واتساب فقط 01212843252">
-  <meta property="og:image" content="moot.png">
-  <meta property="og:type" content="website">
-
+  <title>القرآن الكريم</title>
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-
   <style>
     html { scroll-behavior: smooth; }
     @keyframes shine {
@@ -43,7 +35,10 @@
       animation: fadeIn 1s forwards;
     }
     @keyframes fadeIn {
-      to { opacity: 1; transform: translateY(0); }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
 </head>
@@ -52,17 +47,17 @@
   <!-- تاريخ الوفاة -->
   <div class="text-center py-4">
     <p class="text-lg">😢💔 تاريخ الوفاة: 2025/9/25</p>
-    <p class="shiny-text">لتطوير موقع مجانا</p>
+    <p class="shiny-text">لتطوير موقع مجاناً - 01212843252</p>
   </div>
 
   <!-- اللوجو -->
-  <div class="w-full" style="height:400px;">
+  <div class="w-full" style="height:1305px;">
     <img src="moot.png" alt="logo" class="w-full h-full object-cover">
   </div>
 
   <!-- النص -->
   <h2 class="text-center text-yellow-400 text-2xl my-6">
-    صدقة جارية على روح رمضان عبدالهادي - محمد رمضان الصعيدي "وكل متوفي"
+    صدقة جارية على حرم رمضان عبدالهادي - محمد رمضان الصعيدي "وكل متوفي"
   </h2>
 
   <!-- قائمة السور -->
@@ -70,14 +65,14 @@
 
   <!-- محتوى السورة -->
   <div id="content" class="hidden text-center p-6 fade-in">
+    <button id="backBtn" class="bg-yellow-500 text-black px-4 py-2 rounded mb-6 hover:bg-yellow-600 transition">🔙 رجوع للقائمة</button>
     <h2 id="surahName" class="text-3xl text-yellow-400 mb-4"></h2>
     <audio id="player" controls class="w-11/12 mx-auto mb-6"></audio>
-    <div id="surahText" class="text-xl leading-loose space-y-2"></div>
+    <img id="surahImg" src="" class="mx-auto border-4 border-yellow-400 rounded-lg shadow-lg">
   </div>
 
   <!-- الفوتر -->
   <footer class="text-center text-gray-400 py-6 mt-10 border-t border-gray-700">
-    <p>لتطوير موقع مجانا تواصل واتساب فقط <span class="text-yellow-400">01212843252</span></p>
     <p>جميع الحقوق محفوظة © 2025</p>
   </footer>
 
@@ -103,39 +98,32 @@
     const surahList = document.getElementById("surahList");
     const content = document.getElementById("content");
     const surahName = document.getElementById("surahName");
-    const surahText = document.getElementById("surahText");
+    const surahImg = document.getElementById("surahImg");
     const player = document.getElementById("player");
+    const backBtn = document.getElementById("backBtn");
 
     // إنشاء أزرار السور
     surahs.forEach((name, index) => {
       const div = document.createElement("div");
       div.className = "bg-gray-900 text-white text-xl py-4 rounded-lg cursor-pointer hover:bg-yellow-400 hover:text-black transition";
       div.innerText = name;
-      div.onclick = async () => {
+      div.onclick = () => {
         surahName.innerText = name;
+        surahImg.src = `https://quran-images-api.vercel.app/surah/${index+1}.png`;
         player.src = `https://cdn.islamic.network/quran/audio-surah/128/ar.alafasy/${index+1}.mp3`;
+        surahList.classList.add("hidden");
         content.classList.remove("hidden");
-        content.classList.add("fade-in");
-
-        // جلب النص من API
-        surahText.innerHTML = "جارٍ التحميل...";
-        const res = await fetch(`https://api.alquran.cloud/v1/surah/${index+1}`);
-        const data = await res.json();
-        if (data.code === 200) {
-          surahText.innerHTML = "";
-          data.data.ayahs.forEach(ayah => {
-            const span = document.createElement("span");
-            span.innerText = ayah.text + " ﴿" + ayah.numberInSurah + "﴾ ";
-            surahText.appendChild(span);
-          });
-        } else {
-          surahText.innerHTML = "تعذر تحميل السورة.";
-        }
-
-        window.scrollTo({top: content.offsetTop, behavior:  smooth });
       };
       surahList.appendChild(div);
     });
+
+    // زر الرجوع
+    backBtn.onclick = () => {
+      content.classList.add("hidden");
+      surahList.classList.remove("hidden");
+      player.pause();
+    };
   </script>
 </body>
-</html>
+      </html>
+      
